# the_residual

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _clang-format
src/: box.cpp  box.h  com_box.cpp  com_box.h  game_assets.cpp  game_assets.h  game_state.cpp  game_state.h  game_text.h  main.cpp  menu_button.cpp  menu_button.h  pause_menu.cpp  pause_menu.h  platform.cpp  platform.h  player.cpp  player.h  portal.cpp  portal.h  runtime_ctx.cpp  runtime_ctx.h  text_role.h  text_trigger.cpp  text_trigger.h
src/levels/: gym.cpp  gym.h  intro.cpp  intro.h  level_1.cpp  level_1.h  level_10.cpp  level_10.h  level_11.cpp  level_11.h  level_12.cpp  level_12.h  level_13.cpp  level_13.h  level_14.cpp  level_14.h  level_15.cpp  level_15.h  level_16.cpp  level_16.h  level_17.cpp  level_17.h  level_18.cpp  level_18.h  level_19.cpp  level_19.h  level_2.cpp  level_2.h  level_20.cpp  level_20.h  level_21.cpp  level_21.h  level_22.cpp  level_22.h  level_23.cpp  level_23.h  level_24.cpp  level_24.h  level_3.cpp  level_3.h  (+20 more)
